# link-shortener

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml
migrations/2020-09-25-204429_links/: up.sql
migrations/2020-09-26-184728_serial_id/: down.sql  up.sql
migrations/2020-09-27-070047_unique_name/: down.sql  up.sql
migrations/2020-09-27-073839_enabled_by_default/: down.sql  up.sql
src/: database.rs  errors.rs  main.rs  schema.rs
src/routes/: api.rs  auth.rs  mod.rs  redirect.rs  ui.rs
ui/: 404.html  index.css  index.html  index.js
