[package]
name = "link-shortener"
version = "0.1.0"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
http-auth-basic = "0.1"
lazy_static = "1.4"
log = "0.4"
mime_guess = "2.0"
openssl = "*"
openssl-probe = "0.1"
pretty_env_logger = "0.4"
r2d2 = "0.8"
rust-embed = "5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
